# sudareph

./: .pre-commit-config.yaml  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml  ruff.toml  tox.ini
.github/workflows/: lint.yaml  test.yaml
notebooks/: sample.ipynb  structure.ipynb
sudareph/: __init__.py  cli.py  core.py  utils.py
sudareph/data/: __init__.py  base.py
sudareph/flow/: __init__.py  base.py  parallel.py
sudareph/work/: __init__.py  base.py
tests/: test_app.py  test_cli.py  test_core.py  test_sudareph.py
tests/flow/: test_base.py  test_parallel.py
tests/work/: test_base.py
