[tool.poetry]
name = "sudareph"
version = "0.1.0"
description = ""
authors = ["takesei <sei06k14@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.4"
arrow = "^1.2.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
flake8 = "^4.0.1"
black = "^22.1.0"
isort = "^5.10.1"
tox = "^3.24.5"
mypy = "^0.941"
pydantic = "^1.9.0"

[tool.poetry.scripts]
sudare = "sudareph.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 119
exclude = '''
(
    .git
    | __pychache__
    | .tox
    | .pytest_cache
    | .mypy_cache
)
'''

[tool.mypy]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
disallow_untyped_defs = true
exclude = "tests"

[tool.isort]
profile = "black"
line_length = 119

[tool.tox]
legacy_tox_ini = """
[tox]
skipdist = true
envlist = py39, flake8-lint
[testenv]
whitelist_externals = poetry
skip_install = true
commands =
    poetry install
    poetry run pytest -rsfp
[testenv:lint]
whitelist_externals = poetry
skip_install = true
commands =
    poetry install
    poetry run isort .
    poetry run black .
    poetry run flake8 .
    poetry run mypy .
"""
